--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
     "bootstrap": "^4.3.0",
     "core-js": "^2.5.4",
