--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,17 @@
   "dependencies": {
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
+    "@nestjs/jwt": "^0.3.0",
+    "@nestjs/passport": "^5.1.0",
     "@nestjs/swagger": "^2.5.1",
     "@nestjs/typeorm": "^5.3.0",
+    "bcrypt": "^3.0.4",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "mysql": "^2.16.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.8.1",
     "postgresql": "0.0.1",
     "reflect-metadata": "^0.1.12",
@@ -37,6 +43,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^5.1.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
