--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
     "bootstrap": "^4.3.0",
+    "bootstrap-table": "^1.14.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
