--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,11 @@
     "@angular/router": "~7.2.0",
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
+    "angular-bootstrap-checkbox": "^0.5.0",
     "bootstrap": "^4.3.0",
     "bootstrap-table": "^1.14.1",
     "core-js": "^2.5.4",
+    "date-diff": "^0.2.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
